--- a/src/index.css
+++ b/src/index.css
@@ -24,22 +24,22 @@
   @keyframes fadeIn {
     from {
       opacity: 0;
-      transform: translateY(100%); /* Entfernen oder anpassen */
+      transform: translateY(100%); 
     }
     to {
       opacity: 1;
-      transform: translateY(0); /* Entfernen oder anpassen */
+      transform: translateY(0); 
     }
   }
   
   @keyframes fadeOut {
     from {
       opacity: 1;
-      transform: translateY(0); /* Entfernen oder anpassen */
+      transform: translateY(0); 
     }
     to {
       opacity: 0;
-      transform: translateY(100%); /* Entfernen oder anpassen */
+      transform: translateY(100%); 
     }
   }
 }
@@ -58,6 +58,6 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100%; /* Damit der Hintergrund über die gesamte Höhe reicht */
-  background-color: #111827 /* Deine gewünschte Hintergrundfarbe */
+  height: 100%;
+  background-color: #111827;
 }
