--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,14 @@
   }
 }
 
+.box-shadow {
+  transition: box-shadow 0.3s ease; /* Smooth animation */
+}
+
+.box-shadow:hover {
+  box-shadow: 0.22rem 0.22rem 0.2rem rgba(0, 0, 0, 0.524);
+}
+
 * {
   padding: 0;
   margin: 0;
